Fix login button collapse issue

--- a/css/custom.css
+++ b/css/custom.css
@@ -587,6 +587,7 @@ li.sidebar-log-in {
     position: fixed;
     bottom: 0;
     width: 160px;
+    overflow: hidden;
 }
 
 .enter-effect {
